driver's faq changes

--- a/include/views/default/cockpit2/frontend/drivers/drivers-help.phtml
+++ b/include/views/default/cockpit2/frontend/drivers/drivers-help.phtml
@@ -15,7 +15,7 @@
 			When are shift preferences due?
 		</b>
 		<br>
-		Monday 8 PM Eastern, but the sooner the better. The driver week runs Thurs-Wed.
+		You’ll be texted on Wed at 10 AM Pacific, and you’ll be able to see in <a href="https://cockpit.la/drivers/shifts">cockpit.la/drivers/shifts</a> too!
 		<br><br>
 
 		<b>
@@ -63,7 +63,7 @@
 			What are Flex vs Perma-Shifts?
 		</b>
 		<br>
-		You'll work either the same days every week (perma-shifts) or different days each week (flex shifts). In either case, you can view your shifts any time on cockpit. For flex shifts, you submit your shift preferences on <a href="/drivers/shifts/schedule" class="link orange">driver scheduling page</a>. Email us atteam@crunchbutton.com to set up perma-shifts.
+		You'll work either the same days every week (perma-shifts) or different days each week (flex shifts). In either case, you can view your shifts any time on cockpit. For flex shifts, you submit your shift preferences on <a href="/drivers/shifts/schedule" class="link orange">driver scheduling page</a>. Email us team@crunchbutton.com to set up perma-shifts.
 		<br><br>
 
 		<b>
@@ -77,7 +77,7 @@
 			There’s a bug with Crunchbutton.com/cockpit.la/text messages/a customer says there’s a bug with the website/menu prices are wrong
 		</b>
 		<br>
-		Text us at <a ng-click="callText('646-783-1444')">646-783-1444</a> with the exact details. We hate bugs, so if you can tell us enough info to reproduce and fully fix the problem or correct the whole menu, we’ll add a $10 bonus to your next payment!
+		Email us at team@crunchbutton.com with the exact details/pics. We hate bugs, so if you can tell us enough info to reproduce and fully fix the problem or correct the whole menu, we’d really really appreciate it!!!
 		<br><br>
 
 		<b>
@@ -193,13 +193,6 @@
 		</b>
 		<br>
 		As you get more experience, you'll learn the best parking spots for each restaurant.  Restaurants will also often have a reserved space out front or around the corner.  If that won't do, call ahead of time so you can just pop in and out very quickly!
-		<br><br>
-
-		<b>
-			Do I Get Reimbursed for Gas?
-		</b>
-		<br>
-		Regional gas prices are factored into the standard contracting rate, which varies by location!
 		<br><br>
 
 		<b>
