--- a/include/views/default/cockpit2/frontend/customers/customers.phtml
+++ b/include/views/default/cockpit2/frontend/customers/customers.phtml
@@ -17,6 +17,7 @@
 				<th>Name</th>
 				<th>Phone</th>
 				<th>Address</th>
+				<th>Orders</th>
 				<th>Last&nbsp;Order</th>
 			</tr>
 			<tr ng-repeat="customer in customers">
@@ -24,7 +25,8 @@
 				<td>{{customer.name}}</td>
 				<td><a href ng-click="callText(customer.phone)">{{customer.phone | formatPhone}}</a></td>
 				<td>{{customer.address}}</td>
-				<td>{{customer.order.date | localtime | timestamp | date:'MM/dd @ HH:mm'}}</td>
+				<td>{{customer.orders}}</td>
+				<td><span ng-if="customer._order_date"><span am-time-ago="customer._order_date"></span></span></td>
 			</tr>
 		</table>
 	</div>
