--- a/include/views/default/cockpit2/frontend/config/config.phtml
+++ b/include/views/default/cockpit2/frontend/config/config.phtml
@@ -1,11 +1,10 @@
 <div class="top-pad"></div>
 
 <div class="content-padding">
-	<h1 class="subltitle"><i class="fa fa-cog"></i>&nbsp;&nbsp;<span>Config</span></h1>
+	<h1 class="title"><i class="fa fa-cog"></i>Config</h1>
 	<div class="box-content2 box-content-table">
 		<table>
 			<tr><td><a href="/config/rewards">Customer Rewards</a></td></tr>
 		</table>
 	</div>
-
 </div>
