--- a/include/views/default/cockpit2/frontend/deploy/deploy-server.phtml
+++ b/include/views/default/cockpit2/frontend/deploy/deploy-server.phtml
@@ -2,7 +2,7 @@
 
 <div class="content-padding">
 
-	<h1 class="subltitle"><i class="fa fa-database"></i>&nbsp;&nbsp;<span>{{server.name}}</span></h1>
+	<h1 class="title"><i class="fa fa-database"></i>{{server.name}}</h1>
 	<div class="box-content2 box-content-table">
 		<table>
 			<tr>
@@ -45,7 +45,7 @@
 	</div>
 	
 	<div ng-if="account.user.permissions['SERVER-DEPLOY-ADMIN']">
-		<h1 class="subltitle "><i class="fa fa-bolt"></i>&nbsp;&nbsp;<span>Deploy a Version</span></h1>
+		<h1 class="title"><i class="fa fa-bolt"></i>Deploy a Version</h1>
 		<div class="box-content2 box-content-table">
 			<table>
 				<tr>
@@ -74,7 +74,7 @@
 	</div>
 
 
-	<h1 class="subltitle "><i class="fa fa-bookmark"></i>&nbsp;&nbsp;<span>Versions</span></h1>
+	<h1 class="title"><i class="fa fa-bookmark"></i>Versions</h1>
 	<div class="box-content2 box-content-table">
 		<table class="tb-zebra">
 			<tr>
