--- a/include/views/default/cockpit2/frontend/drivers/drivers-shifts-schedule.phtml
+++ b/include/views/default/cockpit2/frontend/drivers/drivers-shifts-schedule.phtml
@@ -6,7 +6,7 @@
 
 	<div class="divider"></div>
 
-	<h1 class="subltitle">{{period}}</h1>
+	<h1 class="title">{{period}}</h1>
 
 	<div class="divider"></div>
 
