--- a/include/views/default/cockpit2/frontend/general/general-profile.phtml
+++ b/include/views/default/cockpit2/frontend/general/general-profile.phtml
@@ -2,7 +2,7 @@
 
 <div class="content-padding" ng-show="ready">
 
-	<h1 class="subltitle "><i class="fa fa-user"></i>&nbsp;&nbsp;<span>Profile</span></h1>
+	<h1 class="title "><i class="fa fa-user"></i>Profile</h1>
 
 	<ul class="ul-info box-content2">
 		<li class="li-info">
@@ -28,7 +28,7 @@
 	</ul>
 	
 	<div ng-if="account.user.invite_code">
-		<h1 class="subltitle "><i class="fa fa-money"></i>&nbsp;&nbsp;<span>Free money!</span></h1>
+		<h1 class="title"><i class="fa fa-money"></i>Free money!</h1>
 		<ul class="ul-info box-content2">
 	
 			<li class="li-info">
@@ -41,7 +41,7 @@
 	</div>
 	
 	<div ng-if="account.user.permissions.GLOBAL">
-		<h1 class="subltitle "><i class="fa fa-cog"></i>&nbsp;&nbsp;<span>Preferences</span></h1>
+		<h1 class="title"><i class="fa fa-cog"></i>Preferences</h1>
 
 		<div class="tb-info box-content2">
 			<div profile-preference class="tb-info-item" content="Notify on all support tickets" type="bool" key="notification-desktop-support-all"></div>
