--- a/include/views/default/cockpit2/frontend/settlement/settlement-drivers-scheduled.phtml
+++ b/include/views/default/cockpit2/frontend/settlement/settlement-drivers-scheduled.phtml
@@ -1,7 +1,7 @@
 <div class="top-pad"></div>
 
 <div class="content-padding">
-	<h1 class="subltitle "><i class="fa fa-bank"></i>&nbsp;&nbsp;<span>Scheduled Driver Payments Summary</span></h1>
+	<h1 class="title"><i class="fa fa-bank"></i>Scheduled Driver Payments Summary</h1>
 
 	<div ng-if="result">
 
@@ -36,7 +36,7 @@
 
 		<div ng-show="result.drivers">
 			
-			<h1 class="subltitle left"><i class="fa fa-bank"></i>&nbsp;&nbsp;<span>Payments</span></h1>
+			<h1 class="title left"><i class="fa fa-bank"></i>Payments</h1>
 
 			<div class="box-filter right">
 				<button class="button green" ng-class="{ 'inactive' : filter }" ng-click="filter = false">All</button>
