--- a/include/views/default/cockpit2/frontend/settlement/settlement.phtml
+++ b/include/views/default/cockpit2/frontend/settlement/settlement.phtml
@@ -1,7 +1,7 @@
 <div class="top-pad"></div>
 
 <div class="content-padding">
-	<h1 class="subltitle"><i class="fa fa-coffee"></i>&nbsp;&nbsp;<span>Restaurants</span></h1>
+	<h1 class="title"><i class="fa fa-coffee"></i>Restaurants</h1>
 	<div class="box-content2 box-content-table">
 		<table>
 			<tr><td><a href="/settlement/restaurants">New Payment</a></td></tr>
@@ -11,7 +11,7 @@
 		</table>
 	</div>
 	<br>
-	<h1 class="subltitle"><i class="fa fa-car"></i>&nbsp;&nbsp;<span>Drivers</span></h1>
+	<h1 class="title"><i class="fa fa-car"></i>Drivers</h1>
 	<div class="box-content2 box-content-table">
 		<table>
 			<tr><td><a href="/settlement/drivers">New Payment</a></td></tr>
