--- a/include/views/default/cockpit2/frontend/staff/staff-staff.phtml
+++ b/include/views/default/cockpit2/frontend/staff/staff-staff.phtml
@@ -4,7 +4,7 @@
 
 <div class="content-padding">
 
-	<h1 class="subltitle "><i class="fa fa-comments-o"></i>&nbsp;&nbsp;<span>{{staff.name}}</span></h1>
+	<h1 class="title"><i class="fa fa-comments-o"></i>{{staff.name}}</h1>
 	<div class="box-content2 box-content-table">
 		<table class="tb-zebra">
 			<tr>
