--- a/include/views/default/cockpit2/frontend/tickets/tickets-view.phtml
+++ b/include/views/default/cockpit2/frontend/tickets/tickets-view.phtml
@@ -4,7 +4,7 @@
 
 <div class="content-padding">
 
-	<h1 class="subltitle "><i class="fa fa-comments-o"></i>&nbsp;&nbsp;<span>Messages</span></h1>
+	<h1 class="title"><i class="fa fa-comments-o"></i>Messages</h1>
 	<div class="box-content2 box-content-table">
 		<table class="tb-zebra">
 			<tr>
@@ -28,7 +28,7 @@
 		</table>
 	</div>
 	
-	<h1 class="subltitle"><i class="fa fa-phone"></i>&nbsp;&nbsp;<span>Calls</span><div class="title-loader" ng-if="!calls"><i class="fa fa-refresh fa-spin"></i></div></h1>
+	<h1 class="title"><i class="fa fa-phone"></i>Calls<div class="title-loader" ng-if="!calls"><i class="fa fa-refresh fa-spin"></i></div></h1>
 	<div class="box-content2 box-content-table">
 		<table class="tb-zebra">
 			<tr>
