--- a/include/views/default/cockpit2/frontend/deploy/deploy-home.phtml
+++ b/include/views/default/cockpit2/frontend/deploy/deploy-home.phtml
@@ -2,7 +2,7 @@
 
 <div class="content-padding">
 
-	<h1 class="subltitle"><i class="fa fa-database"></i>&nbsp;&nbsp;<span>Environments</span></h1>
+	<h1 class="title"><i class="fa fa-database"></i>Environments</h1>
 	<div class="box-content2 box-content-table">
 		<table class="tb-zebra">
 			<tr>
@@ -19,7 +19,7 @@
 	</div>
 
 
-	<h1 class="subltitle "><i class="fa fa-bookmark"></i>&nbsp;&nbsp;<span>Versions</span></h1>
+	<h1 class="title"><i class="fa fa-bookmark"></i>Versions</h1>
 	<div class="box-content2 box-content-table">
 		<table class="tb-zebra">
 			<tr>
