--- a/include/views/default/cockpit2/frontend/deploy/deploy-version.phtml
+++ b/include/views/default/cockpit2/frontend/deploy/deploy-version.phtml
@@ -2,7 +2,7 @@
 
 <div class="content-padding">
 
-	<h1 class="subltitle"><i class="fa fa-bookmark"></i>&nbsp;&nbsp;<span>Deployment #{{version.id_deploy_version}}</span></h1>
+	<h1 class="title"><i class="fa fa-bookmark"></i>Deployment #{{version.id_deploy_version}}</h1>
 	<div class="box-content2 box-content-table">
 		<table>
 			<tr>
