--- a/include/views/default/cockpit2/frontend/orders/orders-list.phtml
+++ b/include/views/default/cockpit2/frontend/orders/orders-list.phtml
@@ -1,7 +1,7 @@
 <div class="top-pad"></div>
 
 <div class="content-padding">
-	<h1 class="subltitle "><i class="fa fa-car"></i>&nbsp;&nbsp;<span>Orders</span><div class="title-loader" ng-if="loading"><i class="fa fa-refresh fa-spin"></i></div></h1>
+	<h1 class="title"><i class="fa fa-car"></i>Orders<div class="title-loader" ng-if="loading"><i class="fa fa-refresh fa-spin"></i></div></h1>
 	<div class="box-content2 box-content-table">
 		<table>
 			<tr>
