listview interface tweaks

--- a/include/views/default/cockpit2/frontend/orders/orders-list.phtml
+++ b/include/views/default/cockpit2/frontend/orders/orders-list.phtml
@@ -5,18 +5,8 @@
 	<div class="box-content2 box-content-table">
 		<table>
 			<tr>
-				<td><i class="fa fa-search"></i>&nbsp;&nbsp;<input type="text" ng-model="query.search"></td>
-				<th>Limit <input type="text" ng-model="query.limit"></th>
+				<td><i class="fa fa-search"></i>&nbsp;&nbsp;<input type="text" ng-model="query.search" id="search"></td>
 			</tr>
-			<? /*
-			<tr>
-				<th>Date</th>
-				<th>Restaurant</th>
-				<th>Driver</th>
-				<th>Status</th>
-			</tr>
-			*/ ?>
-
 		</table>
 	</div>
 
