--- a/include/views/default/cockpit2/frontend/staff/staff-list.phtml
+++ b/include/views/default/cockpit2/frontend/staff/staff-list.phtml
@@ -5,7 +5,7 @@
 	<div class="box-content2 box-content-table">
 		<table>
 			<tr>
-				<td colspan="4"><i class="fa fa-search"></i>&nbsp;&nbsp;<input type="text" ng-model="query.search"></td>
+				<td colspan="4"><i class="fa fa-search"></i>&nbsp;&nbsp;<input type="text" ng-model="query.search" id="search"></td>
 			</tr>
 
 			<tr>
