--- a/include/views/default/cockpit2/frontend/general/general-404.phtml
+++ b/include/views/default/cockpit2/frontend/general/general-404.phtml
@@ -1,4 +1,3 @@
 <div class="top-pad"></div>
 
-
-<div class="image-not-found"></div>
+<p class="home-text"><i class="fa fa-dashboard home-icon"></i></p>
