--- a/include/views/default/cockpit2/frontend/drivers/drivers-onboarding-form.phtml
+++ b/include/views/default/cockpit2/frontend/drivers/drivers-onboarding-form.phtml
@@ -107,7 +107,7 @@
 
 			<li class="li-input">
 				<div class="label">How soon the driver needs a pexcard:</div>
-				<div class="input"><input type="date" name="pexcardDate" ng-model="driver.pexcard_date" placeholder="yyyy-MM-dd"></div>
+				<div class="input"><input type="date" name="pexcardDate" ignore-mouse-wheel ng-model="driver.pexcard_date" placeholder="yyyy-MM-dd"></div>
 			</li>
 
 			<li class="li-input" ng-class="{'error':form.driverStudent.$invalid}">
