--- a/include/views/default/cockpit/restaurants/restaurant.phtml
+++ b/include/views/default/cockpit/restaurants/restaurant.phtml
@@ -860,6 +860,20 @@
 					<div class="admin-item">
 						<div class="admin-item-left">
 							<div class="admin-item-name">
+								Notes to Driver
+							</div>
+
+							<div class="admin-item-desc"></div>
+						</div>
+
+						<div class="admin-item-right">
+							<textarea id="notes-to-drivers"></textarea>
+						</div>
+					</div>
+
+					<div class="admin-item">
+						<div class="admin-item-left">
+							<div class="admin-item-name">
 								TODO
 							</div>
 
