--- a/include/views/default/cockpit2/frontend/tickets/tickets-ticket.phtml
+++ b/include/views/default/cockpit2/frontend/tickets/tickets-ticket.phtml
@@ -59,14 +59,17 @@
 						<div class="field-key">Phone</div>
 						<div class="field-value"><a href ng-click="callText(ticket.order.driver.phone)">{{ticket.order.driver.phone | formatPhone}}</a></div>
 					</div>
-					<div class="field-row">
-						<div class="field-key">Deliveries</div>
-						<div class="field-value">{{ticket.order.driver.deliveries.length}}</div>
-					</div>
-					<div class="field-row">
-						<div class="field-key">Shift ends in</div>
-						<div class="field-value">@todo</div>
-					</div>
+						<div class="field-row">
+							<div class="field-key">Deliveries</div>
+							<div class="field-value">&nbsp;{{ticket.order.driver.deliveries.length}}</div>
+						</div>
+						<div class="field-row">
+							<div class="field-key">Shift ends in</div>
+							<div class="field-value">
+								<span ng-if="ticket.order.driver.working">{{ticket.order.driver.shift_ends/60/60 | formatPrice}} hours</span>
+								<span ng-if="!ticket.order.driver.working">Shift ended</span>
+							</div>
+						</div>
 
 				</div>
 				 
@@ -87,7 +90,7 @@
 					</div>
 					<div class="field-row">
 						<div class="field-key">Placed At</div>
-						<div class="field-value">{{ticket.order.date}} (<span am-time-ago="ticket.order.date"></span>)</div>
+						<div class="field-value">{{ticket.order.date | localtime | timestamp | date: "MM/dd hh:mm a"}} (<span am-time-ago="ticket.order.date"></span>)</div>
 					</div>
 					<div class="field-row">
 						<div class="field-key">Status</div>
