added buggy driver maps

--- a/include/views/default/cockpit2/frontend/staff/staff-staff.phtml
+++ b/include/views/default/cockpit2/frontend/staff/staff-staff.phtml
@@ -55,46 +55,19 @@
 		</div>
 		
 		<div class="support-box-wrap">
-			<h1>Shifts</h1>
-			<div class="box-content-color">
-				<div class="field-container">
-					<div class="field-row">
-						<div class="field-key">Current</div>
-						<div class="field-value">{{staff.name}}</div>
-					</div>
-					<div class="field-row">
-						<div class="field-key">Phone</div>
-						<div class="field-value"><a href ng-click="callText(staff.phone)">{{staff.phone | formatPhone}}</a></div>
-					</div>
-					<div class="field-row">
-						<div class="field-key">Email</div>
-						<div class="field-value"><a href="mailto:{{staff.email}}">{{staff.email}}</a></div>
-					</div>
-					<div class="field-row">
-						<div class="field-key">Login</div>
-						<div class="field-value">{{staff.login}}</div>
-					</div>
-					<div class="field-row">
-						<div class="field-key">Timezone</div>
-						<div class="field-value">{{staff.timezone}}</div>
-					</div>
-					<div class="field-row">
-						<div class="field-key">Communities</div>
-						<div class="field-value">
-							<span class="staff-community-repeat" ng-repeat="community in staff.communities">
-								{{community}}
-							</span>
-							&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://cockpit.crunchbutton.com/drivers/assign/driver/1" target="_blank"><i class="fa fa-plus-circle"></i></a>
-						</div>
-					</div>
-				</div>
-				 
-			</div>
+			<h1>Location</h1>
+			<map zoom="12" class="maps-map" map-type-control="false" style="height: 230px;" options="{streetViewControl: false}">
+				<traffic-layer></traffic-layer>
+			</map>
+
 		</div>
 		
 	</div>
 
-	<h1 class="title"><i class="fa fa-calendar"></i>Shifts</h1>
+
+
+
+	<h1 class="title"><i class="fa fa-calendar"></i>Shifts</h1>	
 	<div class="box-content2 box-content-table">
 		<table class="tb-zebra">
 			<tr>
