--- a/www/assets/cockpit/scss/cockpit.scss
+++ b/www/assets/cockpit/scss/cockpit.scss
@@ -3304,3 +3304,12 @@ input[type="checkbox"].switch + div:before {
 	background: #ffe8ce;
 }
 
+
+.maps-map {
+	height: 100%;
+}
+
+.angular-google-map-container {
+    width: 100%;
+    height: 900px;
+}
