--- a/include/views/default/cockpit2/bundle/js.phtml
+++ b/include/views/default/cockpit2/bundle/js.phtml
@@ -19,6 +19,7 @@
 <script src="/assets/cockpit/js/angular-moment.min.js"></script>
 <script src="/assets/cockpit/js/socket.min.js"></script>
 <script src="/assets/cockpit/js/angular-hotkeys.min.js"></script>
+<script src="/assets/cockpit/js/angular-google-maps.min.js"></script>
 
 <script src="/assets/js/snap.js"></script>
 <script src="/assets/js/date.js"></script>
@@ -89,3 +90,4 @@
 <script src="/assets/cockpit/js/service.socket.js?v=<?=Cana_Util::gitVersion()?>"></script>
 <script src="/assets/cockpit/js/service.order.js?v=<?=Cana_Util::gitVersion()?>"></script>
 <script src="/assets/cockpit/js/service.view.list.js?v=<?=Cana_Util::gitVersion()?>"></script>
+<script src="/assets/cockpit/js/service.maps.js?v=<?=Cana_Util::gitVersion()?>"></script>
