--- a/include/views/default/cockpit2/frontend/drivers/drivers-shifts-schedule.phtml
+++ b/include/views/default/cockpit2/frontend/drivers/drivers-shifts-schedule.phtml
@@ -2,7 +2,7 @@
 
 <div class="content-padding" ng-show="ready">
 
-	<h1 class="title left"><i class="fa fa-calendar"></i><span>Shifts</span></h1>
+	<h1 class="title left"><i class="fa fa-thumbs-up"></i><span>Shift Preferences</span></h1>
 
 	<div class="divider"></div>
 
