--- a/include/views/default/cockpit2/layout/html.body.phtml
+++ b/include/views/default/cockpit2/layout/html.body.phtml
@@ -28,16 +28,6 @@
 				</table>
 			</a>
 
-			<a href="/tickets" class="menu-link" ng-if="account.user.permissions.GLOBAL && menu.toggle=='admin'" ng-class="{'nav-active': (navigation.page == 'tickets' || navigation.page == 'ticket')}">
-				<table cellpadding="0" cellspacing="0" class="side-menu-wrap">
-					<tr>
-						<td class="side-menu-icon"><i class="fa fa-comments-o"></i></td>
-						<td class="side-menu-label">Support</a></td>
-					</tr>
-				</table>
-			</a>
-
-
 			<a href="/drivers/orders" class="menu-link" ng-if="account.isDriver && menu.toggle=='driver'" ng-class="{'nav-active': (navigation.page == 'drivers-orders')}">
 				<table cellpadding="0" cellspacing="0" class="side-menu-wrap">
 					<tr>
@@ -56,11 +46,29 @@
 				</table>
 			</a>
 			
+			<a href="/tickets" class="menu-link" ng-if="account.user.permissions.GLOBAL && menu.toggle=='admin'" ng-class="{'nav-active': (navigation.page == 'tickets' || navigation.page == 'ticket')}">
+				<table cellpadding="0" cellspacing="0" class="side-menu-wrap">
+					<tr>
+						<td class="side-menu-icon"><i class="fa fa-comments-o"></i></td>
+						<td class="side-menu-label">Support</a></td>
+					</tr>
+				</table>
+			</a>
+			
 			<a href="/restaurants" class="menu-link" ng-if="account.user.permissions.GLOBAL && menu.toggle=='admin'" ng-class="{'nav-active': (navigation.page == 'restaurants' || navigation.page == 'restaurant')}">
 				<table cellpadding="0" cellspacing="0" class="side-menu-wrap">
 					<tr>
 						<td class="side-menu-icon"><i class="fa fa-coffee"></i></td>
 						<td class="side-menu-label">Restaurants</a></td>
+					</tr>
+				</table>
+			</a>
+			
+			<a href="/communities" class="menu-link" ng-if="account.user.permissions.GLOBAL && menu.toggle=='admin'" ng-class="{'nav-active': (navigation.page == 'communities' || navigation.page == 'community')}">
+				<table cellpadding="0" cellspacing="0" class="side-menu-wrap">
+					<tr>
+						<td class="side-menu-icon"><i class="fa fa-slideshare"></i></td>
+						<td class="side-menu-label">Communities</a></td>
 					</tr>
 				</table>
 			</a>
@@ -77,7 +85,7 @@
 			<a href="/drivers/shifts/schedule" class="menu-link" ng-if="account.isDriver && menu.toggle=='driver'" ng-class="{'nav-active': (navigation.page == 'drivers-shift-preferences')}">
 				<table cellpadding="0" cellspacing="0" class="side-menu-wrap">
 					<tr>
-						<td class="side-menu-icon"><i class="fa fa-calendar"></i></td>
+						<td class="side-menu-icon"><i class="fa fa-thumbs-up"></i></td>
 						<td class="side-menu-label">Shift Preferences</a></td>
 					</tr>
 				</table>
@@ -143,7 +151,7 @@
 			<a href="/drivers/onboarding" class="menu-link" ng-if="account.user.permissions.GLOBAL && menu.toggle=='admin'" ng-class="{'nav-active': (navigation.page == 'drivers-onboarding')}">
 				<table cellpadding="0" cellspacing="0" class="side-menu-wrap">
 					<tr>
-						<td class="side-menu-icon"><i class="fa fa-automobile"></i></td>
+						<td class="side-menu-icon"><i class="fa fa-road"></i></td>
 						<td class="side-menu-label">Driver Onboarding</a></td>
 					</tr>
 				</table>
