--- a/www/assets/cockpit/scss/cockpit.scss
+++ b/www/assets/cockpit/scss/cockpit.scss
@@ -2391,6 +2391,7 @@ b, strong{ font-weight: bold; }
 }
 
 
+
 @media(max-width:699px) {
 	.support-box-wrap {
 		width: 100%;
@@ -2398,14 +2399,21 @@ b, strong{ font-weight: bold; }
 }
 @media(min-width:600px) {
 	.support-box-wrap {
+
+	}
+	.support-boxes {
+		-webkit-column-count: 2;
+		-webkit-column-gap: 15px;
+	}
+	.support-boxes-column {
 		width: 50%;
+		box-sizing: border-box;
 		display: inline-block;
 		vertical-align: top;
 	}
-	.support-box-wrap:nth-child(odd) .box-content-color {
-		margin-right: 15px;
+	.support-boxes-column:first-child {
+		padding-right: 15px;
 	}
-
 }
 
 @media (min-width:600px) and (max-width: 1120px) {
@@ -3313,3 +3321,4 @@ input[type="checkbox"].switch + div:before {
     width: 100%;
     height: 900px;
 }
+
