--- a/include/views/default/cockpit2/frontend/orders/orders-order.phtml
+++ b/include/views/default/cockpit2/frontend/orders/orders-order.phtml
@@ -12,9 +12,9 @@
 	<div class="divider"></div>
 	<br>
 	
-	<div ng-if="ready">
+	<div>
 		
-		<div class="support-boxes">
+		<div class="support-boxes-column">
 			<div ng-if="!order.id_order" class="support-box-wrap">
 				<h1>Invalid Order</h1>
 			</div>
@@ -41,9 +41,7 @@
 					</div>
 				</div>
 			</div>
-			
-	
-		
+
 			<div ng-if="order.user.id_user" class="support-box-wrap">
 				<h1>Customer <a href="/customer/{{order.user.id_user}}">#{{order.user.id_user}}</a></h1>
 				<div class="box-content-color">
@@ -66,6 +64,43 @@
 						</div>
 					</div>
 				</div>
+			</div>
+			
+	
+			<div ng-if="order.restaurant.id_restaurant" class="support-box-wrap">
+				<h1>Restaurant <a href="/restaurant/{{order.restaurant.id_restaurant}}">#{{order.restaurant.id_restaurant}}</a></h1>
+				<div class="box-content-color">
+					<div class="field-container">
+						<div class="field-row">
+							<div class="field-key">Name</div>
+							<div class="field-value">{{order.restaurant.name}}</div>
+						</div>
+						<div class="field-row">
+							<div class="field-key">Phone</div>
+							<div class="field-value"><a href ng-click="callText(order.restaurant.phone)">{{order.restaurant.phone | formatPhone}}</a></div>
+						</div>
+						<div class="field-row">
+							<div class="field-key">Address</div>
+							<div class="field-value"><a href ng-click="routeAddress(order.restaurant.address)">{{order.restaurant.address}}</a></div>
+						</div>
+						<div class="field-row">
+							<div class="field-key">Distance from customer</div>
+							<div class="field-value">@todo</div>
+						</div>
+					</div>
+				</div>
+			</div>
+			
+		</div>
+		<div class="support-boxes-column">
+
+			<div class="support-box-wrap" ng-if="order.driver.id_admin">
+				<h1>Location</h1>
+				<map zoom="12" class="maps-map" map-type-control="false" style="height: 230px;" options="{streetViewControl: false}">
+
+				</map>
+				<div class="divider"></div>
+				<br><br>
 			</div>
 	
 			<div ng-if="order.driver.id_admin" class="support-box-wrap">
@@ -95,32 +130,8 @@
 					 
 				</div>
 			</div>
-	
-			<div ng-if="order.restaurant.id_restaurant" class="support-box-wrap">
-				<h1>Restaurant <a href="/restaurant/{{order.restaurant.id_restaurant}}">#{{order.restaurant.id_restaurant}}</a></h1>
-				<div class="box-content-color">
-					<div class="field-container">
-						<div class="field-row">
-							<div class="field-key">Name</div>
-							<div class="field-value">{{order.restaurant.name}}</div>
-						</div>
-						<div class="field-row">
-							<div class="field-key">Phone</div>
-							<div class="field-value"><a href ng-click="callText(order.restaurant.phone)">{{order.restaurant.phone | formatPhone}}</a></div>
-						</div>
-						<div class="field-row">
-							<div class="field-key">Address</div>
-							<div class="field-value"><a href ng-click="routeAddress(order.restaurant.address)">{{order.restaurant.address}}</a></div>
-						</div>
-						<div class="field-row">
-							<div class="field-key">Distance from customer</div>
-							<div class="field-value">@todo</div>
-						</div>
-					</div>
-				</div>
-			</div>
-	
-			</div>
+
+		</div>
 	
 	</div>
 
