--- a/include/views/default/cockpit2/frontend/orders/orders-order.phtml
+++ b/include/views/default/cockpit2/frontend/orders/orders-order.phtml
@@ -96,7 +96,7 @@
 
 			<div class="support-box-wrap" ng-if="order.driver.id_admin">
 				<h1>Location</h1>
-				<map zoom="12" class="maps-map" map-type-control="false" style="height: 230px;" options="{streetViewControl: false}">
+				<map center="false" zoom="12" class="maps-map" map-type-control="false" style="height: 230px;" options="{streetViewControl: false}">
 
 				</map>
 				<div class="divider"></div>
