--- a/include/views/default/cockpit2/frontend/tickets/tickets-ticket.phtml
+++ b/include/views/default/cockpit2/frontend/tickets/tickets-ticket.phtml
@@ -11,149 +11,166 @@
 
 	<div class="divider"></div>
 	
-	<div class="support-boxes">
-		<div ng-if="!ticket.id_support" class="support-box-wrap">
-			<h1>Invalid Ticket</h1>
-		</div>
-
-		<div ng-if="ticket.type == 'WARNING' && !ticket.order.id_order" class="support-box-wrap">
-			<h1>Internal Warning</h1>
-			<div class="box-content-color">
-				No action is required.
+	<div>
+		
+		<div class="support-boxes-column">
+		
+			<div ng-if="ticket.type == 'WARNING' && !ticket.order.id_order" class="support-box-wrap">
+				<h1>Internal Warning</h1>
+				<div class="box-content-color">
+					No action is required.
+				</div>
 			</div>
-		</div>
+			
 	
-		<div ng-if="ticket.user.id_user" class="support-box-wrap">
-			<h1>Customer <a href="/customer/{{ticket.user.id_user}}">#{{ticket.user.id_user}}</a></h1>
-			<div class="box-content-color">
-				<div class="field-container">
-					<div class="field-row">
-						<div class="field-key">Name</div>
-						<div class="field-value">{{ticket.user.name}}</div>
-					</div>
-					<div class="field-row">
-						<div class="field-key">Phone</div>
-						<div class="field-value"><a href ng-click="callText(ticket.user.phone)">{{ticket.user.phone | formatPhone}}</a></div>
-					</div>
-					<div class="field-row">
-						<div class="field-key">Address</div>
-						<div class="field-value"><a href ng-click="routeAddress(ticket.user.address)">{{ticket.user.address}}</a></div>
-					</div>
-					<div class="field-row">
-						<div class="field-key">Distance from restaurant</div>
-						<div class="field-value">@todo</div>
-					</div>
-				</div>
-			</div>
-		</div>
-
-		<div ng-if="ticket.order.driver.id_admin" class="support-box-wrap">
-			<h1>Driver <a href="/staff/{{ticket.order.driver.id_admin}}">#{{ticket.order.driver.id_admin}}</a></h1>
-			<div class="box-content-color">
-				<div class="field-container">
-					<div class="field-row">
-						<div class="field-key">Name</div>
-						<div class="field-value">{{ticket.order.driver.name}}</div>
-					</div>
-					<div class="field-row">
-						<div class="field-key">Phone</div>
-						<div class="field-value"><a href ng-click="callText(ticket.order.driver.phone)">{{ticket.order.driver.phone | formatPhone}}</a></div>
-					</div>
-						<div class="field-row">
-							<div class="field-key">Deliveries</div>
-							<div class="field-value">&nbsp;{{ticket.order.driver.deliveries.length}}</div>
-						</div>
-						<div class="field-row">
-							<div class="field-key">Shift ends in</div>
-							<div class="field-value">
-								<span ng-if="ticket.order.driver.working">{{ticket.order.driver.shift_ends/60/60 | formatPrice}} hours</span>
-								<span ng-if="!ticket.order.driver.working">Shift ended</span>
-							</div>
-						</div>
-
-				</div>
-				 
-			</div>
-		</div>
-		
-		<div ng-if="ticket.order.id_order" class="support-box-wrap">
-			<h1>Order <a href="/order/{{ticket.order.id_order}}">#{{ticket.order.id_order}}</a></h1>
-			<div class="box-content-color">
-				<div class="field-container">
-					<div class="field-row">
-						<div class="field-key">Restaurant</div>
-						<div class="field-value"><a href="/restaurant/{{ticket.restaurant.id_restaurant}}">{{ticket.restaurant.name}} #{{ticket.restaurant.id_restaurant}}</a></div>
-					</div>
-					<div class="field-row">
-						<div class="field-key">Pay / Type</div>
-						<div class="field-value">{{ticket.order.pay_type | capitalize}} / {{ticket.order.delivery_type | capitalize}}</div>
-					</div>
-					<div class="field-row">
-						<div class="field-key">Placed At</div>
-						<div class="field-value">{{ticket.order.date | localtime | timestamp | date: "MM/dd hh:mm a"}} (<span am-time-ago="ticket.order.date"></span>)</div>
-					</div>
-					<div class="field-row">
-						<div class="field-key">Status</div>
-						<div class="field-value">
-							<span ng-if="order.status"><b>{{order.status.status}}</b> <span am-time-ago="order.status.timestamp*1000"></span></span>
-							<span ng-if="!order.status">{{order.confirmed ? 'Confirmed' : 'Placed'}}</span>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-		
-		<? /*
-		<div ng-if="ticket.restaurant.id_restaurant" class="support-box-wrap">
-			<h1>Restaurant <a href="/restaurant/{{ticket.restaurant.id_restaurant}}">#{{ticket.restaurant.id_restaurant}}</a></h1>
-			<div class="box-content-color">
-				<div class="field-container">
-					<div class="field-row">
-						<div class="field-key">Name</div>
-						<div class="field-value">{{ticket.restaurant.name}}</div>
-					</div>
-					<div class="field-row">
-						<div class="field-key">Phone</div>
-						<div class="field-value"><a href ng-click="callText(ticket.restaurant.phone)">{{ticket.restaurant.phone | formatPhone}}</a></div>
-					</div>
-					<div class="field-row">
-						<div class="field-key">Address</div>
-						<div class="field-value"><a href ng-click="routeAddress(ticket.restaurant.address)">{{ticket.restaurant.address}}</a></div>
-					</div>
-					<div class="field-row">
-						<div class="field-key">Distance from customer</div>
-						<div class="field-value">@todo</div>
-					</div>
-				</div>
-			</div>
-		</div>
-		*/ ?>
-		
-		<div class="support-box-wrap" ng-if="ticket.type != 'WARNING'">
-			<h1>Resolution <a href ng-click="triggerViewTicket(ticket.id_support)"><i class="fa fa-comment-o"></i></a></h1>
-			<div class="box-content-color">
-				<div ng-if="ticket.order.id_order">
+			<div ng-if="ticket.order.id_order" class="support-box-wrap">
+				<h1>Order <a href="/order/{{ticket.order.id_order}}">#{{ticket.order.id_order}}</a></h1>
+				<div class="box-content-color">
 					<div class="field-container">
 						<div class="field-row">
-							<div class="field-key">Who is to blame?</div>
+							<div class="field-key">Restaurant</div>
+							<div class="field-value"><a href="/restaurant/{{ticket.restaurant.id_restaurant}}">{{ticket.restaurant.name}} #{{ticket.restaurant.id_restaurant}}</a></div>
+						</div>
+						<div class="field-row">
+							<div class="field-key">Pay / Type</div>
+							<div class="field-value">{{ticket.order.pay_type | capitalize}} / {{ticket.order.delivery_type | capitalize}}</div>
+						</div>
+						<div class="field-row">
+							<div class="field-key">Placed At</div>
+							<div class="field-value">{{ticket.order.date | localtime | timestamp | date: "MM/dd hh:mm a"}} (<span am-time-ago="ticket.order.date"></span>)</div>
+						</div>
+						<div class="field-row">
+							<div class="field-key">Status</div>
+							<div class="field-value">
+								<span ng-if="order.status"><b>{{order.status.status}}</b> <span am-time-ago="order.status.timestamp*1000"></span></span>
+								<span ng-if="!order.status">{{order.confirmed ? 'Confirmed' : 'Placed'}}</span>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		
+			<div ng-if="ticket.user.id_user" class="support-box-wrap">
+				<h1>Customer <a href="/customer/{{ticket.user.id_user}}">#{{ticket.user.id_user}}</a></h1>
+				<div class="box-content-color">
+					<div class="field-container">
+						<div class="field-row">
+							<div class="field-key">Name</div>
+							<div class="field-value">{{ticket.user.name}}</div>
+						</div>
+						<div class="field-row">
+							<div class="field-key">Phone</div>
+							<div class="field-value"><a href ng-click="callText(ticket.user.phone)">{{ticket.user.phone | formatPhone}}</a></div>
+						</div>
+						<div class="field-row">
+							<div class="field-key">Address</div>
+							<div class="field-value"><a href ng-click="routeAddress(ticket.user.address)">{{ticket.user.address}}</a></div>
+						</div>
+						<div class="field-row">
+							<div class="field-key">Distance from restaurant</div>
 							<div class="field-value">@todo</div>
 						</div>
 					</div>
-					<div class="field-button-wrap">
-						<div class="field-button"><button class="button orange">Refund</button></div>
-					</div>
 				</div>
-				<div ng-if="ticket.user.id_user">
-					<div class="field-button-wrap">
-						<div class="field-button"><button class="button orange">Gift Card</button></div>
-					</div>
-				</div>
-				<div class="field-button-spacer"></div>
 			</div>
-		</div>
+			
+			
 	
+			<div ng-if="ticket.restaurant.id_restaurant" class="support-box-wrap">
+				<h1>Restaurant <a href="/restaurant/{{ticket.restaurant.id_restaurant}}">#{{ticket.restaurant.id_restaurant}}</a></h1>
+				<div class="box-content-color">
+					<div class="field-container">
+						<div class="field-row">
+							<div class="field-key">Name</div>
+							<div class="field-value">{{ticket.restaurant.name}}</div>
+						</div>
+						<div class="field-row">
+							<div class="field-key">Phone</div>
+							<div class="field-value"><a href ng-click="callText(ticket.restaurant.phone)">{{ticket.restaurant.phone | formatPhone}}</a></div>
+						</div>
+						<div class="field-row">
+							<div class="field-key">Address</div>
+							<div class="field-value"><a href ng-click="routeAddress(ticket.restaurant.address)">{{ticket.restaurant.address}}</a></div>
+						</div>
+						<div class="field-row">
+							<div class="field-key">Distance from customer</div>
+							<div class="field-value">@todo</div>
+						</div>
+					</div>
+				</div>
+			</div>
+	
+	
+			
+		</div>
+			
+		<div class="support-boxes-column">
+	
+			<div class="support-box-wrap" ng-if="ticket.order.driver.id_admin">
+				<h1>Location</h1>
+				<map center="false" zoom="12" class="maps-map" map-type-control="false" style="height: 230px;" options="{streetViewControl: false}">
+	
+				</map>
+				<div class="divider"></div>
+				<br><br>
+			</div>
+			
+				
+	
+			<div ng-if="ticket.order.driver.id_admin" class="support-box-wrap">
+				<h1>Driver <a href="/staff/{{ticket.order.driver.id_admin}}">#{{ticket.order.driver.id_admin}}</a></h1>
+				<div class="box-content-color">
+					<div class="field-container">
+						<div class="field-row">
+							<div class="field-key">Name</div>
+							<div class="field-value">{{ticket.order.driver.name}}</div>
+						</div>
+						<div class="field-row">
+							<div class="field-key">Phone</div>
+							<div class="field-value"><a href ng-click="callText(ticket.order.driver.phone)">{{ticket.order.driver.phone | formatPhone}}</a></div>
+						</div>
+							<div class="field-row">
+								<div class="field-key">Deliveries</div>
+								<div class="field-value">&nbsp;{{ticket.order.driver.deliveries.length}}</div>
+							</div>
+							<div class="field-row">
+								<div class="field-key">Shift ends in</div>
+								<div class="field-value">
+									<span ng-if="ticket.order.driver.working">{{ticket.order.driver.shift_ends/60/60 | formatPrice}} hours</span>
+									<span ng-if="!ticket.order.driver.working">Shift ended</span>
+								</div>
+							</div>
+	
+					</div>
+					 
+				</div>
+			</div>
+	
+			
+			<div class="support-box-wrap" ng-if="ticket.type != 'WARNING'">
+				<h1>Resolution <a href ng-click="triggerViewTicket(ticket.id_support)"><i class="fa fa-comment-o"></i></a></h1>
+				<div class="box-content-color">
+					<div ng-if="ticket.order.id_order">
+						<div class="field-container">
+							<div class="field-row">
+								<div class="field-key">Who is to blame?</div>
+								<div class="field-value">@todo</div>
+							</div>
+						</div>
+						<div class="field-button-wrap">
+							<div class="field-button"><button class="button orange">Refund</button></div>
+						</div>
+					</div>
+					<div ng-if="ticket.user.id_user">
+						<div class="field-button-wrap">
+							<div class="field-button"><button class="button orange">Gift Card</button></div>
+						</div>
+					</div>
+					<div class="field-button-spacer"></div>
+				</div>
+			</div>
+		
+		</div>
 	</div>
 
 </div>
-
-<hack-expand-content></hack-expand-content>
