--- a/include/views/default/cockpit2/frontend/tickets/tickets-ticket.phtml
+++ b/include/views/default/cockpit2/frontend/tickets/tickets-ticket.phtml
@@ -1,6 +1,6 @@
 <div class="top-pad"></div>
 
-<div class="content-padding" ng-if="ready">
+<div class="content-padding">
 
 	<h1 class="title left"><i class="fa fa-comments-o"></i><span>Support</span> : Issue #{{ticket.id_support}}</h1>
 
