--- a/include/views/default/cockpit2/frontend/orders/orders-order.phtml
+++ b/include/views/default/cockpit2/frontend/orders/orders-order.phtml
@@ -37,7 +37,7 @@
 								<span ng-if="!order.status">{{order.confirmed ? 'Confirmed' : 'Placed'}}</span>
 							</div>
 						</div>
-						<div class="field-row">
+						<div class="field-row" ng-if="order.status.status != 'delivered'">
 							<div class="field-key">ETA</div>
 							<div class="field-value">
 								{{eta.total.duration + 15 | formatPrice}} minutes
@@ -131,19 +131,19 @@
 								<span ng-if="!order.driver.working">Shift ended</span>
 							</div>
 						</div>
-						<div class="field-row">
+						<div class="field-row" ng-if="order.status.status == 'accepted'">
 							<div class="field-key">Restaurant Dis</div>
 							<div class="field-value">
 								{{eta.restaurant.duration | formatPrice}} minutes / {{eta.restaurant.distance | formatPrice}} miles
 							</div>
 						</div>
-						<div class="field-row">
+						<div class="field-row" ng-if="order.status.status != 'delivered'">
 							<div class="field-key">Customer Dis</div>
 							<div class="field-value">
 								{{eta.customer.duration | formatPrice}} minutes / {{eta.customer.distance | formatPrice}} miles
 							</div>
 						</div>
-						<div class="field-row">
+						<div class="field-row" ng-if="order.status.status == 'accepted'">
 							<div class="field-key">Total Dis</div>
 							<div class="field-value">
 								{{eta.total.duration | formatPrice}} minutes / {{eta.total.distance | formatPrice}} miles
