--- a/include/views/default/cockpit2/frontend/orders/orders-order.phtml
+++ b/include/views/default/cockpit2/frontend/orders/orders-order.phtml
@@ -102,7 +102,7 @@
 			<div class="support-box-wrap" ng-if="order.driver.id_admin">
 				<h1>Location</h1>
 				<map center="false" zoom="12" class="maps-map" map-type-control="false" style="height: 230px;" options="{streetViewControl: false}">
-	
+					<traffic-layer ng-if="order.status.status != 'delivered'"></traffic-layer>
 				</map>
 				<div class="divider"></div>
 				<br><br>
